# rt1060-rs

./: .dod.yml  .gitattributes  .gitignore  .tbdflow.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  svd-scope.json
benches/: step.rs
docs/: DESIGN.md  svd-coverage.md
examples/: diag.rs  gdbserver.rs  mm_download.rs  probe.rs  run_image.rs  teensy.rs
src/: lib.rs  rt1060.rs
src/cortex_m/: asm.rs  decoded.rs  fpu.rs  mod.rs  tests.rs  tests_exc.rs  tests_wide.rs  wide.rs
src/gdb/: mod.rs
src/loader/: mod.rs
src/memory/: mod.rs
src/peripherals/: adc.rs  analog.rs  ccm.rs  clocks.rs  edma.rs  flexcan.rs  flexspi.rs  gpio.rs  gpt.rs  lpi2c.rs  lpspi.rs  lpuart.rs  mod.rs  pit.rs  pwm.rs  qtmr.rs  sai.rs  semc.rs  src.rs  usb.rs  usdhc.rs  wdog.rs
tests/: boot_fixture.rs  bringup.rs  mm_download.rs  smoke.rs  teensy_hil.rs
tests/fixtures/: README.md  madmachine_swiftio_accel.elf  madmachine_swiftio_blink.elf  madmachine_swiftio_blink.img  madmachine_swiftio_i2c.elf  madmachine_swiftio_i2s.elf  madmachine_swiftio_lcd.elf  madmachine_swiftio_pot.elf  madmachine_swiftio_pwm.elf  madmachine_swiftio_rtc.elf  madmachine_swiftio_uart.elf  swiftio_blink_embedded_swift.elf  swiftio_teensy_blink.elf  swiftio_teensy_blink.hex
tests/fixtures/swiftio_blink_src/: blink.swift  link.ld  startup.c
tests/fixtures/swiftio_teensy_src/: BUILD.md  main.swift  payload.S  stage.c  stage.ld
