[package]
name = "rt1060-rs"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "NXP i.MX RT1060 (MIMXRT1062, Cortex-M7) emulator — run real, unmodified firmware (MadMachine SwiftIO, Zephyr, Arduino)"
repository = "https://github.com/ajsb85/rt1060-rs"
authors = ["Alexander Salas Bastidas <ajsb85@firechip.dev>"]
keywords = ["emulator", "imxrt", "cortex-m7", "embedded", "nxp"]
categories = ["emulators", "embedded"]

[lib]
crate-type = ["rlib", "cdylib"]

# Hard rule: the library stays dependency-free (see CLAUDE.md).
[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
